# boltz-slurm

./: .gitignore  LICENSE  README.md
backend/: app.py  pyproject.toml  run_server.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ConstraintInput.jsx  Header.jsx  InputView.jsx  LandingPage.jsx  LoadingView.jsx  MolstarViewer.jsx  ResultsView.jsx  SequenceInput.jsx  Sidebar.jsx  TemplateInput.jsx
