[project]
name = "boltz-gui"
version = "0.1.0"
description = "Web interface for Boltz protein-ligand affinity prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boltz>=2.0.3",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
]
